--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "description": "A blog application Project",
   "dependencies": {
     "axios": "^1.8.2",
+    "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.14.0",
     "quill-delta-to-html": "^0.12.1"
   }
